--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -78,7 +78,7 @@ html
                 br
                 br
                 figcaption
-                  p.narrow Fig.1 A overview of pan-genome analysis and visualization pipeline.
+                  p.narrow Fig.1 An overview of pan-genome analysis and visualization pipeline.
                   p.narrow
                     b  panX analysis pipeline
                     |  is based on DIAMOND, MCL and phylogeny-aware post-processing to determine clusters of orthologous genes from a collection of annotated genomes. panX generates a strain/species tree based on core genome SNPs and a gene tree for each gene cluster.
