update readme and pipeline.jade

--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -86,23 +86,23 @@ html
                     b panX interactive visualization:
                   p.narrow
                     b (1)
-                    |  The dynamic profile charts allow rapid filtering and selection of gene subsets in cluster table;
+                    |  The dynamic pan-genome statistical charts allow rapid filtering and selection of gene subsets in cluster table;
                   p.narrow clicking a gene cluster in cluster table loads
                     b  (2)
                     |  related alignment,
                     b  (3)
                     |  individual gene tree and
                     b  (4)
-                    |  gene presence/absence and gain/loss pattern on species/strain tree;
+                    |  gene presence/absence and gain/loss pattern on strain/species tree;
                   p.narrow
                     b  (5)
-                    |  Selecting sequences in alignment highlights associated strains on species/strain tree;
+                    |  Selecting sequences in alignment highlights associated strains on strain/species tree;
                   p.narrow
                     b  (6) (7)
-                    |  Species/strain tree interacts with gene tree in various ways;
+                    |  Strain/species tree interacts with gene tree in various ways;
                   p.narrow
                     b  (8)
-                    |  Zooming into a clade on species/strain tree screens strains in metadata table;
+                    |  Zooming into a clade on strain/species tree screens strains in metadata table;
                   p.narrow
                     b  (9)
                     |  Searching in metadata table display strains pertinent to specific meta-information.
