use homepage as index page

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,138 @@
-extends layout
+doctype html
+html
+  head
+    meta(charset='UTF-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    //- link(rel="stylesheet", type="text/css", href="dist/all-edge.css")
+    link(rel='stylesheet', type='text/css', href='stylesheets/bootstrap.min.css', media='screen')
+    link(rel='stylesheet', type='text/css', href='stylesheets/autohiding-navbar2.css', media='screen')
+    link(rel='stylesheet', type='text/css', href='stylesheets/footer.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/autocomplete.css')
+    link(type='text/css', rel='stylesheet', href='stylesheets/page-appearance.css')
+    link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
+    title panX
 
-block content
+  body
+    include navbar
+    .container.home
+      .row
+        br
+        br
+        br
+      .row.panX-text
+        #logo.col-md-3
+          img.homepage_logo(src='images/pan-blue-noReads.svg')
+          //.col-md-2
+        .col-md-8
+          br
+          p panX is a software package for comprehensive pan-genome analysis, web-based interactive visualization and dynamic exploration. The analysis pipeline is based on DIAMOND, MCL and phylogeny-aware post-processing.
+          p The web application encompasses various interconnected viewers (pan-genome statistical charts, gene cluster table, alignment, comparative phylogenies, metadata table). Gene clusters can be rapidly searched and filtered by gene name, annotation, duplication and their phylogenetic properties such as diversity or the number of gene gain/loss events.
+
+          p
+            strong Metadata
+            |  associated with the strains and gene presence/absence patterns can be mapped onto the species tree. Such mapping facilitates the identification of genes associated with particular ecological niches, phenotypes such as antibiotic resistance, virulence, or epidemiological parameters such as host age.
+      p(style='font-size:22px') Showcases of panX functionalities:
+      .row.panX-text
+        .col-md-6
+          .thumbnail.shadow_homepagex
+            .caption
+              h4 Epidemiology of 616 Streptococcus pneumoniae strains
+              p
+                a(href='https://www.nature.com/articles/sdata201558') Croucher et al. (2015)
+                span(style="display:inline-block; width:5px;")
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Sp616')  Demo
+                span(style="display:inline-block; width:2px;")
+                a.btn.btn-default(href='./S_pneumoniae616', role='button') Explore
+            a(href='./S_pneumoniae616')
+              img(src='./images/Demo-Sp616.gif', alt='...')
+
+        .col-md-6
+          .thumbnail.shadow_homepagex
+            .caption
+              h4 Diverse Prochlorococcus genomes: gene gain/loss pattern
+              p
+                a(href='https://www.nature.com/articles/sdata201434') Biller et al. (2014)
+                span(style="display:inline-block; width:5px;")
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
+                span(style="display:inline-block; width:2px;")
+                a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
+            a(href='./P_marinus_meta')
+              img(src='./images/Pm_case.png', alt='...')
+              //, style='width:100%;height:320px'
+        //.col-md-4
+          .thumbnail.shadow_homepagex
+            img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
+            .caption
+              h4 Comparative dashborad
+              p details...
+              p
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
+                a.btn.btn-default(href='#', role='button') Explore
+      p(style='font-size:22px') Pan-genomes from NCBI RefSeq genomes:
+      #dc_data_count.col-md-3
+        .alert.alert-info(role='alert') Species
+        #species-selector
+        #species-search(style='margin-top:3px')
+      //.row.panX-text
+        .col-md-6
+          .thumbnail.shadow_homepagex
+            img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
+            .caption
+              h4 Tutorial 1
+              p details...
+              p
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
+                a.btn.btn-default(href='#', role='button') Explore
+        .col-md-6
+          .thumbnail.shadow_homepagex
+            img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
+            .caption
+              h4 Tutorial 2
+              p details...
+              p
+                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
+                a.btn.btn-default(href='#', role='button') Explore
+
+      #Modal_Sp616.modal.fade(role='dialog')
+        .modal-dialog.modal-lg
+          .modal-content
+            .modal-header
+              button.close(type='button', data-dismiss='modal') ×
+              h4.modal-title Gene presence/absence, gain/loss pattern
+            .modal-body
+              img(src='./images/Demo-Sp616.gif', style='width:100%;')
+              //img(data-gifffer='./images/Demo-Sp616.gif', style='width:100%;')
+            .modal-footer
+              button.btn.btn-info(type='button', data-dismiss='modal') Close
+
+      #Modal_Pm.modal.fade(role='dialog')
+        .modal-dialog.modal-lg
+          .modal-content
+            .modal-header
+              button.close(type='button', data-dismiss='modal') ×
+              h4.modal-title Gene presence/absence, gain/loss pattern
+            .modal-body
+              img(src='./images/Demo-Pm.gif', style='width:100%;')
+            .modal-footer
+              button.btn.btn-info(type='button', data-dismiss='modal') Close
+      br
+      br
+      br
+      br
+
+    include footer
+
+    script(src='javascripts/third_party/gifffer.min.js')
+    script.
+      window.onload = function() {
+      Gifffer();
+      }
+
     script.
       var speciesAbbr='S_pneumoniae616'
-    script(src='dataset/S_pneumoniae616/metaConfiguration.js')
+    script(src='javascripts/species-list-info.js')
+    script(src='javascripts/third_party/jquery.min.js')
+    script(src='javascripts/third_party/bootstrap.min.js')
+    script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
+    script(src='javascripts/third_party/call-autohidingnavbar.js')
+    script(src='dist/homepage.js')
