--- a/views/home.jade
+++ b/views/home.jade
@@ -20,10 +20,17 @@ html
         br
         br
       .row.panX-text
-        #logo.col-md-3
-          img.homepage_logo(src='images/pan-blue-noReads.svg')
+        #logo.col-md-2
+          //img.homepage_logo(src='images/pan-blue-noReads.svg')
+          img(src='images/pan-blue-noReads.svg', style='width:230;height:209px;')
           //.col-md-2
-        .col-md-8
+        //p(style='font-size:22px') Pan-genomes from NCBI RefSeq data:
+        #dc_data_count.col-md-3
+          br
+          .alert.alert-info(role='alert') Pan-genomes from NCBI RefSeq data
+          #species-selector
+          #species-search(style='margin-top:3px')
+        .col-md-7
           br
           p panX is a software package for comprehensive pan-genome analysis, web-based interactive visualization and dynamic exploration. The analysis pipeline is based on DIAMOND, MCL and phylogeny-aware post-processing.
           p The web application encompasses various interconnected viewers (pan-genome statistical charts, gene cluster table, alignment, comparative phylogenies, metadata table). Gene clusters can be rapidly searched and filtered by gene name, annotation, duplication and their phylogenetic properties such as diversity or the number of gene gain/loss events.
@@ -68,11 +75,7 @@ html
               p
                 a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
                 a.btn.btn-default(href='#', role='button') Explore
-      p(style='font-size:22px') Pan-genomes from NCBI RefSeq genomes:
-      #dc_data_count.col-md-3
-        .alert.alert-info(role='alert') Species
-        #species-selector
-        #species-search(style='margin-top:3px')
+
       //.row.panX-text
         .col-md-6
           .thumbnail.shadow_homepagex
