update msa_legend style

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -68,6 +68,7 @@ html
         .col-md-6
           .alert.alert-info(role='alert')
             #sequence_viewer_title Sequence alignment
+          #msa_legend(style='padding-top:3px')
           #snippetDiv
       #all_trees.row.cs_shadow
         .col-md-6
