speciesAbbr set to null for homepage, such that select species list has a default explanation

--- a/views/home.jade
+++ b/views/home.jade
@@ -133,7 +133,7 @@ html
       }
 
     script.
-      var speciesAbbr='S_pneumoniae616'
+      var speciesAbbr='null'
     script(src='javascripts/species-list-info.js')
     script(src='javascripts/third_party/jquery.min.js')
     script(src='javascripts/third_party/bootstrap.min.js')
