allow configurable standard columns for cluster table

--- a/views/P_aeruginosa.jade
+++ b/views/P_aeruginosa.jade
@@ -4,4 +4,5 @@ block content
     script.
       var speciesAbbr='P_aeruginosa'
     script(src='dataset/P_aeruginosa/metaConfiguration.js')
+    script(src='dataset/P_aeruginosa/standardColumnConfig.js')
     script(src='dataset/P_aeruginosa/newColumnConfig.js')
