--- a/views/home.jade
+++ b/views/home.jade
@@ -61,7 +61,7 @@ html
               p
                 a(href='https://www.nature.com/articles/sdata201434') Biller et al. (2014)
                 span(style="display:inline-block; width:5px;")
-                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
+                //a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
                 span(style="display:inline-block; width:2px;")
                 a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
             a(href='./P_marinus_meta')
