add case for dataset that does not have proper accession info

--- a/views/P_marinus_meta.jade
+++ b/views/P_marinus_meta.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
     script.
-      var speciesAbbr='P_marinus_meta'
+      var speciesAbbr='P_marinus_meta', not_accession=true;
     script(src='dataset/P_marinus_meta/metaConfiguration.js')
