--- a/views/TestSet.jade
+++ b/views/TestSet.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
     script.
-      var speciesAbbr='m_test'
-    script(src='dataset/m_test/metaConfiguration.js')
+      var speciesAbbr='TestSet'
+    script(src='dataset/TestSet/metaConfiguration.js')
