--- a/views/layout.jade
+++ b/views/layout.jade
@@ -137,6 +137,7 @@ html
                     button#geneTreeUnroot.triplet-button-single.triplet-button-single-toggle.option3(type='button')
                       img(src='images/unrooted.png')
               input#geneTreeScale.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Scale', data-off='Scale', data-size='mini')
+              input#geneTreeLabels.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Label', data-off='Label', data-size='mini')
               input#geneTreeOrientation(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Right-left', data-off='Left-right', data-size='mini', data-onstyle='primary', data-offstyle='info')
               button#geneTree_height_plus.btn.btn-xs.btn-primary.btn_tooltip
                 span.glyphicon.glyphicon-resize-full
@@ -148,6 +149,8 @@ html
                 span.glyphicon.glyphicon-minus
               button#geneTreeZoomReset.btn.btn-xs.btn-primary.btn_tooltip
                 span.glyphicon.glyphicon-refresh
+              button#geneTreeColorReset.btn.btn-xs.btn-primary.btn_tooltip
+                span.glyphicon.glyphicon-repeat
             //#dropdown_list2.col-md-4
             .col-md-2
               #searchAccession-group.input-group
