add downloads in homepage

--- a/views/navbar_pipeline.jade
+++ b/views/navbar_pipeline.jade
@@ -14,6 +14,10 @@
         li.active
           a(href='pipeline') Methods
         li
+          a(href='./home#downloads') Downloads
+        li
+          a(href='#contacts') How to run
+        li
           a(href='tutorial') Tutorials
       ul.nav.navbar-nav.navbar-right
         li
