--- a/views/navbar_tutorial.jade
+++ b/views/navbar_tutorial.jade
@@ -13,6 +13,10 @@
           a(href='./S_pneumoniae616') Applications
         li
           a(href='pipeline') Methods
+        li
+          a(href='./home#downloads') Downloads
+        li
+          a(href='#contacts') How to run
         li.active
           a(href='tutorial') Tutorials
       ul.nav.navbar-nav.navbar-right
