--- a/views/home.jade
+++ b/views/home.jade
@@ -5,6 +5,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     //- link(rel="stylesheet", type="text/css", href="dist/all-edge.css")
     link(rel='stylesheet', type='text/css', href='stylesheets/bootstrap.min.css', media='screen')
+    link(rel="stylesheet", type="text/css", href='stylesheets/dataTables.bootstrap.css')
     link(rel='stylesheet', type='text/css', href='stylesheets/autohiding-navbar2.css', media='screen')
     link(rel='stylesheet', type='text/css', href='stylesheets/footer.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/autocomplete.css')
@@ -33,12 +34,11 @@ html
         .col-md-7
           .row(style='padding-left:18px')
             br
-            p panX is a software package for comprehensive pan-genome analysis, web-based interactive visualization and dynamic exploration. The analysis pipeline is based on DIAMOND, MCL and phylogeny-aware post-processing.
-            p The web application encompasses various interconnected viewers (pan-genome statistical charts, gene cluster table, alignment, comparative phylogenies, metadata table). Gene clusters can be rapidly searched and filtered by gene name, annotation, duplication and their phylogenetic properties such as diversity or the number of gene gain/loss events.
-
+            p panX is a software package for comprehensive analysis, interactive visualization and dynamic exploration of bacterial pan-genomes. The analysis pipeline is based on DIAMOND, MCL and phylogeny-aware post-processing.
+            p The visualization application encompasses various interconnected components (statistical charts, gene cluster table, alignment, comparative phylogenies, metadata). Gene clusters can be rapidly searched and filtered by summary statistics such as annotation and phylogenetic properties such as diversity.
             p
               strong Metadata
-              |  associated with the strains and gene presence/absence patterns can be mapped onto the species tree. Such mapping facilitates the identification of genes associated with particular ecological niches, phenotypes such as antibiotic resistance, virulence, or epidemiological parameters such as host age.
+              |  and gene presence/absence patterns can be mapped onto the species tree. Such mapping facilitates the identification of genes associated with phenotypes such as antibiotic resistance, virulence, or epidemiological parameters such as host age.
       p(style='font-size:22px') Showcases of panX functionalities:
       .row.panX-text
         .col-md-6
@@ -67,35 +67,6 @@ html
             a(href='./P_marinus_meta')
               img(src='./images/Pm_case.png', alt='...')
               //, style='width:100%;height:320px'
-        //.col-md-4
-          .thumbnail.shadow_homepagex
-            img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
-            .caption
-              h4 Comparative dashborad
-              p details...
-              p
-                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
-                a.btn.btn-default(href='#', role='button') Explore
-
-      //.row.panX-text
-        .col-md-6
-          .thumbnail.shadow_homepagex
-            img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
-            .caption
-              h4 Tutorial 1
-              p details...
-              p
-                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
-                a.btn.btn-default(href='#', role='button') Explore
-        .col-md-6
-          .thumbnail.shadow_homepagex
-            img(src='./images/comparative-dashborad.jpg', alt='...', style='width:100%;')
-            .caption
-              h4 Tutorial 2
-              p details...
-              p
-                a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#myModal') Demo
-                a.btn.btn-default(href='#', role='button') Explore
 
       #Modal_Sp616.modal.fade(role='dialog')
         .modal-dialog.modal-lg
@@ -119,10 +90,20 @@ html
               img(src='./images/Demo-Pm.gif', style='width:100%;')
             .modal-footer
               button.btn.btn-info(type='button', data-dismiss='modal') Close
+
+      .row.panX-text#citation
+        p(style='font-size:22px') If you use panX, please cite:
+        p
+          | Wei Ding, Franz Baumdicker, Richard A Neher;
+          strong  panX: pan-genome analysis and exploration,
+          |  Nucleic Acids Research, Volume 46, Issue 1, 9 January 2018, Pages e5,
+        strong
+          a(href='https://doi.org/10.1093/nar/gkx977') https://doi.org/10.1093/nar/gkx977
       br
-      br
-      br
-      br
+      .row.cs_shadow#downloads
+        .col-md-12
+          .alert.alert-info(role='alert') Downloads
+          table#download_table.table.table-striped.table(cellspacing='0', width='100%')
 
     include footer
 
