--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -12,7 +12,11 @@
         li.active
           a(href='./S_pneumoniae616') Applications
         li
-          a(href='pipeline') Pipeline
+          a(href='pipeline') Methods
+        li
+          a(href='#downloads') Downloads
+        li
+          a(href='#contacts') How to run
         li
           a(href='tutorial') Tutorials
       ul.nav.navbar-nav.navbar-right
