add #metadata_legend in layouts

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -114,7 +114,8 @@ html
               //- br
               #colorblind_div(style='visibility: hidden;padding-left:4px')
                 input#colorblind_safe.btn_tooltip(type='checkbox', data-toggle='toggle', data-style='ios', data-on="<i class='glyphicon glyphicon-eye-open'></i>", data-off="<i class='glyphicon glyphicon-eye-open'></i>", data-size='mini',data-onstyle='success', data-offstyle='info')
-              svg#coreTree_legend
+              #metadata_legend
+                svg#coreTree_legend
             .col-md-10
               #speciesTreeDiv
                 svg#speciesTree
