--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -12,11 +12,7 @@
         li.active
           a(href='./S_pneumoniae616') Applications
         li
-          a(href='pipeline') Methods
-        li
-          a(href='#downloads') Downloads
-        li
-          a(href='#contacts') How to run
+          a(href='pipeline') Pipeline
         li
           a(href='tutorial') Tutorials
       ul.nav.navbar-nav.navbar-right
