--- a/views/notFound.jade
+++ b/views/notFound.jade
@@ -10,7 +10,7 @@ html
 
     link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
 
-    title panX
+    title Micro-PanGenome-Analysis-Visualization
   body
     include navbar
     .container
@@ -28,7 +28,7 @@ html
 
     include footer
 
-    script(src='javascripts/third_party/jquery.min.js')
-    script(src='javascripts/third_party/bootstrap.min.js')
-    script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
-    script(src='javascripts/third_party/call-autohidingnavbar.js')
+    script(src='javascripts/jquery.min.js')
+    script(src='javascripts/bootstrap.min.js')
+    script(src='javascripts/jquery.bootstrap-autohidingnavbar.min.js')
+    script(src='javascripts/call-autohidingnavbar.js')
