--- a/views/tutorial.jade
+++ b/views/tutorial.jade
@@ -39,49 +39,52 @@ html
           #components_interaction
             .alert.alert-info(role='alert')
               | Exploring the interaction of different components
-            .item
-              img(data-gifffer='./images/Demo-Sp616.gif', style='width:100%;')
+
+            a(href='http://pangenome.tuebingen.mpg.de/tutorial',style='font:17px bold')
+              u Please visit our official website for tutorial details
+            //- .item
+            //-   img(data-gifffer='./images/overall2.gif', style='width:100%;')
             br
             br
           #search_functions
             .alert.alert-info(role='alert') Search genes by name or annotation
-            .item
-              img(data-gifffer='./images/searchBy.gif', alt='...', style='width:100%;')
+            //- .item
+            //-   img(data-gifffer='./images/searchBy.gif', alt='...', style='width:100%;')
             br
           #duplicated_genes
             .alert.alert-info(role='alert') Spotting duplicated genes
-            p
-            .item
-              img(data-gifffer='./images/dupli.gif', alt='...', style='width:100%;')
+            //- p
+            //- .item
+            //-   img(data-gifffer='./images/dupli.gif', alt='...', style='width:100%;')
             br
           #diverse_genes
             .alert.alert-info(role='alert') Spotting diverse genes
-            p
-            .item
-              img(data-gifffer='./images/diverse.gif', alt='...', style='width:100%;')
+            //- p
+            //- .item
+            //-   img(data-gifffer='./images/diverse.gif', alt='...', style='width:100%;')
             br
           #unique_genes
             .alert.alert-info(role='alert') Exploring unique genes
-            p
-            .item
-              img(data-gifffer='./images/unique.gif', alt='...', style='width:100%;')
+            //- p
+            //- .item
+            //-   img(data-gifffer='./images/unique.gif', alt='...', style='width:100%;')
             br
           #annotation_inspection
             .alert.alert-info(role='alert')  Inspecting the annotation of all genes in each clusters
-            p
-            .item
-              img(data-gifffer='./images/annotation.gif', alt='...', style='width:100%;')
+            //- p
+            //- .item
+            //-   img(data-gifffer='./images/annotation.gif', alt='...', style='width:100%;')
             br
           #mutation_inspection
             .alert.alert-info(role='alert') Examining amino acid and nucleotide mutations in the gene tree
-            p
-            .item
-              img(data-gifffer='./images/muts.gif', alt='...', style='width:100%;')
+            //- p
+            //- .item
+            //-   img(data-gifffer='./images/muts.gif', alt='...', style='width:100%;')
             br
           #meta-info_pattern
             .alert.alert-info(role='alert') Displaying strain specific meta-information on the core genome tree
-            p
-            img(data-gifffer='./images/interactive-metaInfo-pattern.gif', alt='...', style='width:100%;')
+            //- p
+            //- img(data-gifffer='./images/interactive-metaInfo-pattern.gif', alt='...', style='width:100%;')
     include footer
 
     script(src='javascripts/third_party/gifffer.min.js')
