--- a/views/footer.jade
+++ b/views/footer.jade
@@ -12,8 +12,24 @@ footer.footer-distributed
         a(href='./tutorial')
           u Tutorials
         p.footer-author Software and website: Wei Ding and Richard Neher
-        p.footer-author Logo and website &copy; 2016 Wei Ding
+        p.footer-author
+          | Logo and website © 2016
+          script.
+            new Date().getFullYear()>2010&&document.write("- "+new Date().getFullYear());
+          |  Wei Ding. All rights reserved.
     .footer-center.col-md-4
+      #repo
+        i.fa.fa-github
+        p
+          span(style='font-weight: bold;') How to run
+          span
+            a(href='https://github.com/neherlab/pan-genome-analysis')
+              u pan-genome-analysis
+          span
+            a(href='https://github.com/neherlab/pan-genome-visualization/')
+              u pan-genome-visualization
+          span
+            br
       #contacts
         i.fa.fa-envelope
         p
@@ -37,17 +53,7 @@ footer.footer-distributed
             a(href='http://www.biozentrum.unibas.ch/')
               u Biozentrum, University of Basel
           span  Basel, Switzerland
-      #repo
-        i.fa.fa-github
-        p
-          span
-            br
-          span
-            a(href='https://github.com/neherlab/pan-genome-analysis')
-              u pan-genome-analysis
-          span
-            a(href='https://github.com/neherlab/pan-genome-visualization/')
-              u pan-genome-visualization
+
     .footer-right.col-md-4
       p.footer-website-about
         span About panX
