--- a/views/home.jade
+++ b/views/home.jade
@@ -56,17 +56,21 @@ html
 
         .col-md-6
           .thumbnail.shadow_homepagex
+            .embed-responsive.embed-responsive-16by9
+              iframe.embed-responsive-item(src='https://player.vimeo.com/video/348170421', allowfullscreen)
+            hr(style="margin-bottom:3px")
             .caption
-              h4 Diverse Prochlorococcus genomes: gene gain/loss pattern
+              h4 Explore another example: diverse Prochlorococcus genomes
+                //(gene gain/loss pattern)
               p
                 a(href='https://www.nature.com/articles/sdata201434') Biller et al. (2014)
                 span(style="display:inline-block; width:5px;")
                 //a.btn.btn-info(href='#', role='button', data-toggle='modal', data-target='#Modal_Pm') Demo
                 span(style="display:inline-block; width:2px;")
                 a.btn.btn-default(href='./P_marinus_meta', role='button') Explore
-            a(href='./P_marinus_meta')
-              img(src='./images/Pm_case.png', alt='...')
-              //, style='width:100%;height:320px'
+            //- a(href='./P_marinus_meta')
+            //-   img(src='./images/Pm_case.png', alt='...')
+            //-   //, style='width:100%;height:320px'
 
       #Modal_Sp616.modal.fade(role='dialog')
         .modal-dialog.modal-lg
