--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -21,22 +21,17 @@ html
             li.active
               a(href='#overview')  Pipeline overview
             li
-              a(href='#JS') JavaScript libraries
-            li
-              a(href='#DIAMOND') DIAMOND
-            li
-              a(href='#MCL') MCL
+              a(href='#benchmark') Benchmarking
         .col-sm-6.panX-text
           br
           .alert.alert-info(role='alert') Pipeline overview
           #overview
             p
               b Input:
-              strong  RefSeq
-              |  records from NCBI/
-              strong  user's own genome sequences (GenBank format)
+              |  NCBI GenBank records or user's own genome sequences in GenBank format
             p
-              b Clustering: DIAMOND + MCL + phylogeny-based post-processing
+              b Clustering:
+              |  DIAMOND + MCL + phylogeny-based post-processing
             .item
               figure
                 img(src='./images/panX-pipeline.png', alt='...', style='width:100%;')
@@ -45,16 +40,18 @@ html
                 figcaption
                   p.narrow Fig.1 An overview of pan-genome analysis and visualization pipeline.
                   p.narrow
-                    b  panX analysis pipeline
-                    |  is based on DIAMOND, MCL and phylogeny-aware post-processing to determine clusters of orthologous genes from a collection of annotated genomes. panX generates a strain/species tree based on core genome SNPs and a gene tree for each gene cluster.
+                    a(href='https://github.com/neherlab/pan-genome-analysis')
+                      u PanX analysis pipeline
+                    |  is based on DIAMOND, MCL and phylogeny-aware post-processing to determine clusters of orthologous genes from a collection of annotated genomes. PanX generates a strain/species tree based on core genome SNPs and a gene tree for each gene cluster.
                   p.narrow
-                    b panX interactive visualization:
+                    a(href='https://github.com/neherlab/pan-genome-visualization/')
+                      u PanX interactive visualization:
                   p.narrow
                     b (1)
-                    |  The dynamic pan-genome statistical charts allow rapid filtering and selection of gene subsets in cluster table;
-                  p.narrow clicking a gene cluster in cluster table loads
+                    |  The dynamic pan-genome statistical charts allow rapid filtering and selection of gene subsets in the gene cluster table;
+                  p.narrow clicking a gene cluster in the cluster table loads
                     b  (2)
-                    |  related alignment,
+                    |  corresponding alignment,
                     b  (3)
                     |  individual gene tree and
                     b  (4)
@@ -70,76 +67,25 @@ html
                     |  Zooming into a clade on strain/species tree screens strains in metadata table;
                   p.narrow
                     b  (9)
-                    |  Searching in metadata table display strains pertinent to specific meta-information.
+                    |  Searching in metadata table display strains associated with specific meta-information.
           br
-          .alert.alert-info(role='alert') JavaScript libraries
-          #JS
-            p
-              b Interactive charts:
-              a(href='https://dc-js.github.io/dc.js/')
-                u dc.js
-              |  (interactive charting JS library based on
-              a(href="http://square.github.io/crossfilter/")
-                u crossfilter
-              |  and
-              a(href="https://d3js.org/")
-                u d3
-              | )
-              i.fa.fa-heart(aria-hidden='true',style='color:red;')
-              a(href="https://github.com/gordonwoodhull")
-                u Gordon Woodhull's
-              |  support and advice highly appreciated!
-            p
-              b Data tables:
-              a(href="https://datatables.net/")
-                u DataTables
-              |  plug-in for the enhancement of data accessibility
-            p
-              b Alignment:
-              a(href="http://msa.biojs.net/")
-                u MSA
-              |  (multiple sequence alignment JS library)
-            p
-              b Phylogenetic tree:
-              a(href="https://github.com/nextstrain/phyloTree")
-                u PhyloTree
-              |  (highly flexible tree visualization JS library) crafted by
-              a(href="https://github.com/neherlab")
-               u Richard Neher
-          br
-          #DIAMOND
-            .alert.alert-info(role='alert') DIAMOND
-            p
-              b The all-against-all comparison of protein sequences
-              |  from all strains is performed by the fast and sensitive protein alignment tool
-              a(href='https://github.com/bbuchfink/diamond')
-                u DIAMOND
-              a(href='http://www.nature.com/nmeth/journal/v12/n1/full/nmeth.3176.html')
-                u (Buchfink et al. 2015 Nature Methods)
-              | , which applies a double indexing method to compute the list of seed and location information in both queries and references.
-            .item
+          #Benchmarking
+            .alert.alert-info.alert-large(role='alert') Benchmarking
+            #simulation-data
+              h4 Simulated datasets
               figure
-                img(src='./images/diamond.png', alt='...', style='width:100%')
-                figcaption
-                  | Fig.2 DIAMOND, a double indexing approach using the list of seed and their location in both queries and references.
-                a(href='http://ab.inf.uni-tuebingen.de/teaching/ws14/bioinf/13-BeyondBlast.pdf')
-                  u Image credit: Lecture notes by Daniel Huson, Tübingen University
-          br
-          #MCL
-            .alert.alert-info(role='alert') MCL
-            p The sequence similarly matrix using bit-score from the DIAMOND output serves as input for the Markov Clustering Algorithm (MCL) to create the clusters of homologous genes.
-            p Afterwards, the clusters are post-processed by splitting clusters that involve distantly related sequences and contain a large number of paralogs.
-            .item
+                  img(src='./images/ms-benchmark-simulations.png', style='width:698px;height:488px;')
+                  figcaption
+                    a(href='https://academic.oup.com/nar/article/46/1/e5/4564799#107886318')
+                     u Check here for details:  comparison of clustering accuracy on simulated datasets - Figure 2.
+            #real-data
+              h4 Real datasets
               figure
-                img(src='./images/mcl-svg.jpg', style='width:547px;height:496px;')
-                figcaption Fig.4 Graph clustering using Markov chain and flow simulation (MCL).
-              a(href='http://micans.org/mcl/index.html?sec_thesisetc')
-                u
-                  | Image Credit: Stijn van Dongen, Graph Clustering by Flow Simulation. PhD thesis, University of Utrecht, May 2000.
-              br
-              br
-              a(href='https://www.cs.ucsb.edu/~xyan/classes/CS595D-2009winter/MCL_Presentation2.pdf')
-                u Lecture notes on MCL by Kathy Macropol, Arcadia University
+                  img(src='./images/ms-benchmark-realdata.png', style='width:90%')
+                  figcaption
+                    a(href='https://academic.oup.com/nar/article/46/1/e5/4564799#107886318')
+                      u Check here for details: real pan-genomes - Figure 4.
+
     include footer
     script(src='javascripts/third_party/jquery.min.js')
     script(src='javascripts/third_party/bootstrap.min.js')
