--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -69,7 +69,7 @@ html
                     b  (9)
                     |  Searching in metadata table display strains associated with specific meta-information.
           br
-          #Benchmarking
+          #benchmark
             .alert.alert-info.alert-large(role='alert') Benchmarking
             #simulation-data
               h4 Simulated datasets
@@ -78,6 +78,7 @@ html
                   figcaption
                     a(href='https://academic.oup.com/nar/article/46/1/e5/4564799#107886318')
                      u Check here for details:  comparison of clustering accuracy on simulated datasets - Figure 2.
+            br
             #real-data
               h4 Real datasets
               figure
