--- a/views/notFound.jade
+++ b/views/notFound.jade
@@ -12,7 +12,7 @@ html
 
     title panX
   body
-    include navbar
+    include components/navbar
     .container
       .row
         br
@@ -26,7 +26,7 @@ html
           .alert.alert-danger(role='alert')
             h3 Page not found, please make sure that the requested URL is valid.
 
-    include footer
+    include components/footer
 
     script(src='javascripts/third_party/jquery.min.js')
     script(src='javascripts/third_party/bootstrap.min.js')
