--- a/views/components/navbar.jade
+++ b/views/components/navbar.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='./home')  panX: Pan-genome Analysis & Exploration
+      a.navbar-brand(href='./')  panX: Pan-genome Analysis & Exploration
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li.active
