--- a/views/components/navbar_tutorial.jade
+++ b/views/components/navbar_tutorial.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='./home')  panX: Pan-genome analysis & exploration
+      a.navbar-brand(href='./')  panX: Pan-genome analysis & exploration
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li
@@ -14,7 +14,7 @@
         li
           a(href='pipeline') Methods
         li
-          a(href='./home#downloads') Downloads
+          a(href='./#downloads') Downloads
         li
           a(href='#contacts') How to run
         li.active
