feat: allow setting data root url
This is controlled by the env var `DATA_ROOT_URL` (see `.env.example`).

`msa` library had to be patched to disable automatic CORS-proxying of absolute URLs through `https://cors-anywhere.herokuapp.com/`. I had to edit `/home/ia/work/aws_pangenome/public/javascripts/third_party/msa-niaid.js` and set defaults for the following configuration fields to an empty string:

```
importProxy: ""
importProxyStripHttp: ""
```

--- a/views/pathogen_template.jade
+++ b/views/pathogen_template.jade
@@ -4,10 +4,10 @@ block content
     script.
       var speciesAbbr = '#{pathogenName}'
 
-    script(src='dataset/#{pathogenName}/metaConfiguration.js')
+    script(src='#{DATA_ROOT_URL}/dataset/#{pathogenName}/metaConfiguration.js')
 
     if hasStandardColumnConfig
-        script(src='dataset/#{pathogenName}/standardColumnConfig.js')
+        script(src='#{DATA_ROOT_URL}/dataset/#{pathogenName}/standardColumnConfig.js')
 
     if hasNewColumnConfig
-        script(src='dataset/#{pathogenName}/newColumnConfig.js')
+        script(src='#{DATA_ROOT_URL}/dataset/#{pathogenName}/newColumnConfig.js')
