fix: use https urls for remote resources

--- a/views/tutorial.jade
+++ b/views/tutorial.jade
@@ -8,7 +8,7 @@ html
     link(rel='stylesheet', type='text/css', href='stylesheets/footer.css')
     link(type='text/css', rel='stylesheet', href='stylesheets/page-appearance.css')
 
-    link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
+    link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     title panX: pan-genome analysis & exploration
 
   body(data-spy='scroll', data-target='#myScrollspy', data-offset='100')
