--- a/views/components/layout-gridstack.jade
+++ b/views/components/layout-gridstack.jade
@@ -23,7 +23,7 @@ html
     //- link(rel="stylesheet", type="text/css", href='stylesheets/footer.css')
 
     // footer icon and font
-    link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
+    link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     //link(rel='stylesheet', type='text/css', href='bower_components/font-awesome/css/font-awesome.min.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/fontawesome-customized.css')
     link(rel="icon", type="image/png", href="images/pan-blue.png", sizes="32x32")
