--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ html
     link(rel='stylesheet', type='text/css', href='stylesheets/footer.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/autocomplete.css')
     link(type='text/css', rel='stylesheet', href='stylesheets/page-appearance.css')
-    link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
+    link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
     title panX
 
   body
